liquid fuel combust tut added

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -187,6 +187,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
+	<li> 16/4: Tutorial on liquid fuel combustion is added </li> 
 	<li> 11/4: Demo/Tutorial session on 12/4.
 	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added</li> 
 </ul>
@@ -355,8 +356,6 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Turbulent non-premixed flames  </td>
 	<td> CKL $11.4, TP $6.4.3, TP $6.4.5 </td></tr>
 	
-	<tr> <td> Droplet combustion theory  </td>
-	<td> DBS $3, $4, $5, $6, $7 </td></tr>
 </table><br>
 </div><br>
 
@@ -378,15 +377,17 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	
 </table><br>
 </div><br>
-<br>
 
-<!-- <button class="collapsible"> -->
-<h3>Module 4: Spray combustion and applications</h3>
-<!-- </button> -->
-<!-- <div class="content"> -->
+<button class="collapsible">
+	<h5>Module 4: Spray combustion and applications: <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a>  </h5>
+</button>
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
+	<tr> <td> Droplet combustion theory  </td>
+	<td> DBS $3, $4, $5, $6, $7 </td></tr>
+
    <tr> 
 	<td> Basics of atomization and types of injectors</td>
 	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> </td> </tr>
@@ -398,11 +399,12 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> </td></tr>
 	
 </table><br>
-<!-- </div><br> -->
+</div><br>
+<br>
 
-<!--<h3> Module 5: Solid fuel combustion</h3> -->
-<button class="collapsible"><h5>Module 5: Solid fuel combustion</h5></button>
-<div class="content">
+<h3> Module 5: Solid fuel combustion</h3>
+<!--<button class="collapsible"><h5>Module 5: Solid fuel combustion</h5></button>
+<div class="content">-->
 	<table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -420,7 +422,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> </td></tr>
 	
 </table><br>
-</div>
+<!--</div>-->
 
 <!-- ><h2> Lecture summary </h2>
 <ul><li>	 	
