liquid fuel combust tut added

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -251,7 +251,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> February 21st</td></tr>
 	<tr> <td> <font color="khaki">Non-Premixed flames</font> </td>
 	<td> February 28th</td></tr>
-	<tr> <td> <font color="khaki">Droplet combustion</font></td>
+	<tr> <td> <font color="khaki">Droplet vaporization</font></td>
 	<td> March 14th</td></tr>
 	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor, <a href="https://owncloud.iitm.ac.in/index.php/s/lxA4YcDR2PcucpM">Questionnaire</a>. Due by April 11th</font></td>
 	<td> March 28th</td></tr>
@@ -262,22 +262,21 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Spray combustion: tutorial/demo</font></td>
+	<tr> <td> <font color="greenyellow">Liquid fuel combustion: injectors</font></td>
 	<td> April 12th</td></tr>
+	<tr> <td> <font color="khaki">Liquid fuel combustion</font></td>
+	<td> April 16th</td></tr>
+	<tr> <td> <font color="greenyellow">Solid fuel combustion: tutorial/demo: Coal gasifier, MILD inspired burner for biomass</font></td>
+	<td> April 25th</td></tr>
 </table>
-<button class="collapsible"><h4>View more events</h4></button>
+<!--<button class="collapsible"><h4>View more events</h4></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
-	<tr> <td> <font color="greenyellow">Solid fuel combustion: Coal gasifier, MILD inspired burner for biomass</font></td>
-	<td> April 18th</td></tr>
-
-	<tr> <td> <font color="khaki">Solid fuel combustion</font></td>
-	<td> April 25th</td></tr>	
 </table>
 </div>
-</table>
+-->
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
