--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -366,6 +366,10 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<col width = "65%">
 	<col width = "35%">	
    <tr> 
+	<td> Flame stability - flash back and blow off </td>
+	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> </td> </tr>
+
+   <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
 	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
 	
