adding solid fuel materials

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -105,11 +105,12 @@ p
     <li> An introduction to fire dynamics, Douglas Drysdale, 2011 (DD) </li>
 	<li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
     <li> Combustion Theory by F. A. Williams, ABP, 1985 (FAW) </li>
-    <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
+    <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM1) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 	<li> <a href="https://www.itv.rwth-aachen.de/fileadmin/Downloads/Summerschools/SummerSchool.pdf" target="_blank">Ercoftac Summer school, Norbert Perters, 1992 (NP)</a></li>
 	<li> Combustion of liquid sprays, Alan Williams, 1989 (AW)</li>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/q5BbpF31aIEcTjL" target="_blank">Understanding clean energy and fuels from biomass, H. S. Mukunda (HSM2)</a> </li>
 </ul>
 </tr>
 </table>
@@ -121,6 +122,10 @@ p
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
 		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p>
 		 <li> Final exam: 45%</li>
+		 <p style="padding-left: 50px;"><font color="lightgreen">Date: May , Time: 9 AM--12 PM, Venue: TDCE seminar hall</font></p>
+		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: Two A4 size sheets (written on both sides) are permitted</font></p>
+		<p style="padding-left: 50px;"><font color="lightgreen">Topics: All materials covered from the beginning of the course till the last day of classes</font></p></li>
+		</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/index.php/s/bTuzOTYzPEcjqf6" target="_blank">March/April Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
 		 <li> <font color="lightgreen">About a third of the mid-sem and final exams will be in line with the tutorial sets</font>
@@ -187,13 +192,15 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 16/4: Tutorial on liquid fuel combustion is added </li> 
-	<li> 11/4: Demo/Tutorial session on 12/4.
-	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added</li> 
+	<li> 28/4: Reading materials for solid fuel combustion are added</li> 
+	<li> 26/4: Reading materials for flame stability are added within Module 3</li> 
 </ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+	<li> 16/4: Tutorial on liquid fuel combustion is added </li> 
+	<li> 11/4: Demo/Tutorial session on 12/4.
+	<li> 5/4: Tutorial on gaseous fuel combustion, questionnaire for Demo 3 are added</li> 
 	<li> 15/3: Tutorial on non-premixed flames is updated </li> 
 	<li> 6/3: Solutions for Demo 2 are due on 7/3 before 5 PM. Turn it in to the TAs.
     <li> 28/2: Tutorial on non-premixed flames is updated </li>
@@ -306,7 +313,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> <a href="https://www.researchgate.net/profile/Ellen_Meeks/publication/260388319_PREMIX_a_fortran_program_for_modeling_steady_laminar_one-dimensional_premixed_flames/links/53fe0de20cf23bb019bd249d/PREMIX-a-fortran-program-for-modeling-steady-laminar-one-dimensional-premixed-flames.pdf" target="_blank">PREMIX documentation</a> </td></tr>
 	
 	<tr> <td> Quenching and ignition energy  </td>
-	<td> HSM $7.1, $7.2, $8.0</td></tr>
+	<td> HSM1 $7.1, $7.2, $8.0</td></tr>
 	
 	<tr> <td> Flammability limits  </td>
 	<td> DD $3.1, $3.3,  CKL $8.5</td></tr>
@@ -415,14 +422,14 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> Single particle combustion theory for coal and biomass</td>
 	<td> </td> </tr>
 	
-	<tr> <td> Combustion in pulverized coal burners</td>
-	<td>  </td></tr>
+	<tr> <td> Basic principles </td>
+	<td> HSM2 $1, $4 </td></tr>
 	
-	<tr> <td> Combustion and gasification of coal in fluidized bed systems - design considerations </td>
-	<td> </td></tr>
+	<tr> <td> Combustion and gasification of biomass </td>
+	<td> HSM2 $6 </td></tr>
 
-	<tr> <td> Flame propagation in packed beds and its application in design of moving grate furnaces</td>
-	<td> </td></tr>
+	<tr> <td> Gasifier stoves </td>
+	<td> HSM2 $8</td></tr>
 	
 </table><br>
 <!--</div>-->
