open up all modules me6166

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -294,8 +294,11 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	</tr> 
 </table><br>
 
+<!--
 <button class="collapsible"><h5>Module 1: Premixed flames, with bunsen burner as an example:  <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h5></button>
 <div class="content">
+-->
+<h3>Module 1: Premixed flames, with bunsen burner as an example:  <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=KAXqhCYjjJplUyu" target="_blank">Lecture summary</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -327,11 +330,14 @@ Upcoming tutorial session: Premixed flames -- February 14th
 		<!-- Relevant sections: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=iUrc3R3phpGa9Od" target="_blank">TP $5.1</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XHripGSowZqbqbF" target="_blank">TP $5.3</a>-->
 	 </td></tr>
 </table><br>
-</div><br>
+<!--  </div><br> -->
 
+<!--
 <button class="collapsible">
 	<h5>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a></h5></button>
 <div class="content">
+-->
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/uDStSgYMsRWRGzo" target="_blank">Tutorial</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -363,12 +369,15 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> CKL $11.4, TP $6.4.3, TP $6.4.5 </td></tr>
 	
 </table><br>
-</div><br>
+<!--</div><br> -->
 
+<!--
 <button class="collapsible">
 	<h5>Module 3: Burners for gaseous fuels: <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a>  </h5>
 </button>
 <div class="content">
+-->
+<h3> Module 3: Burners for gaseous fuels: <a href="https://owncloud.iitm.ac.in/index.php/s/iI8L4yd0CGPpYeF" target="_blank"> Tutorial </a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -386,12 +395,15 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> <a href="https://oaktrust.library.tamu.edu/handle/1969.1/163372" target="_blank">Lean premixed combustion</td></tr>
 	
 </table><br>
-</div><br>
+<!-- </div><br> -->
 
+<!--
 <button class="collapsible">
 	<h5>Module 4: Spray combustion and applications: <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a>  </h5>
 </button>
 <div class="content">
+-->
+	<h3> Module 4: Spray combustion and applications: <a href="https://owncloud.iitm.ac.in/index.php/s/7W9G78IN9FQ2YNy" target="_blank"> Tutorial </a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -409,8 +421,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> </td></tr>
 	
 </table><br>
-</div><br>
-<br>
+<!-- </div><br> -->
 
 <h3> Module 5: Solid fuel combustion</h3>
 <!--<button class="collapsible"><h5>Module 5: Solid fuel combustion</h5></button>
