open up all modules me6166

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -122,7 +122,7 @@ p
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
 		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p>
 		 <li> Final exam: 45%</li>
-		 <p style="padding-left: 50px;"><font color="lightgreen">Date: May , Time: 9 AM--12 PM, Venue: TDCE seminar hall</font></p>
+		 <p style="padding-left: 50px;"><font color="lightgreen">Date: May 3rd (Friday), Time: 9 AM--12 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: Two A4 size sheets (written on both sides) are permitted</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Topics: All materials covered from the beginning of the course till the last day of classes</font></p></li>
 		</li>
