--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 <h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">M. C. Sanjay</a><br></h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-<p>Sanjay obtained his B. Tech in Mechanical Engineering from NIT Calicut in 2015. He received his M. Tech in Thermal Engineering at IIT Madras in 2017. His project focused on thermodynamic property estimation. </p></br>
+<p>Sanjay obtained his B. Tech in Mechanical Engineering from NIT Calicut in 2015. He received his M. Tech in Thermal Engineering at IIT Madras in 2017. His project focused on thermodynamic property estimation. He is currently working as a scientific officer at the Nuclear Power Corporation of India Limited (NPCIL).</p></br>
 <!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 
@@ -1032,7 +1032,8 @@ For an M. Tech project*
 <ul>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
-		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br><br>
+		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br>
+		<i><a href="teaching/ME1100_Jul_Nov_2019.html" target="_blank">Jul-Nov 2019</a> </i><br><br>		
 <li>	ME5107/ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents</a><br>
 		<i>Jan-May 2016</i><br>
 		<i>Jan-May 2017</i><br>
