adding gallery images

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -43,7 +43,7 @@ Our team as of May 2017	<br>
 
 <br><br><br>
 Participants of IDMCKAA: December 2016 <br>
-	<img src="../images/Group_Pic_IDMCKAA_2016.jpg" width="750">
+	<img src="../images/Group_Pic_IDMCKAA_2016.JPG" width="750">
 
 </center>
 
