--- a/index.html
+++ b/index.html
@@ -1031,17 +1031,17 @@ For an M. Tech project*
 	
 <ul>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
-		<i>Jul-Nov 2016</i><br>
-		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br>
+		<i>Jul-Nov 2016</i>: <a href="https://owncloud.iitm.ac.in/index.php/s/Nr7vLjiXklNJQc4" target="_blank">TCF</a><br>
+		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a></i>: <a href="https://owncloud.iitm.ac.in/index.php/s/nY7Bow9Yw7ijq6s" target="_blank">TCF</a> <br>
 		<i><a href="teaching/ME1100_Jul_Nov_2019.html" target="_blank">Jul-Nov 2019</a> </i><br><br>		
 <li>	ME5107/ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents</a><br>
-		<i>Jan-May 2016</i><br>
-		<i>Jan-May 2017</i><br>
-		<i>Jan-May 2018</i><br><br>
+		<i>Jan-May 2016</i>: <a href="https://owncloud.iitm.ac.in/index.php/s/nvHUdcQUnyNBU8R" target="_blank">TCF</a><br>
+		<i>Jan-May 2017</i>: <a href="https://owncloud.iitm.ac.in/index.php/s/99NncJyQ6udH1vU" target="_blank">TCF</a><br>
+		<i>Jan-May 2018</i>: <a href="https://owncloud.iitm.ac.in/index.php/s/Yftex8FUXmzsfAS" target="_blank">TCF</a><br><br>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
-		<i><a href="teaching/ME6060_Jul_Nov_2017.html" target="_blank">Jul-Nov 2017</a></i><br><br>
+		<i><a href="teaching/ME6060_Jul_Nov_2017.html" target="_blank">Jul-Nov 2017</a></i>: <a href="https://owncloud.iitm.ac.in/index.php/s/TldgYPqQe4abETj" target="_blank">TCF</a><br><br>
 <li>	ME6166: Combustion Technology<br>
-		<i><a href="teaching/ME6166_Jan_May_2019.html" target="_blank">Jan-May 2019</a></i><br><br>
+		<i><a href="teaching/ME6166_Jan_May_2019.html" target="_blank">Jan-May 2019</a></i>: <a href="https://owncloud.iitm.ac.in/index.php/s/MDWa4Ezqg0Y73uU" target="_blank"> TCF</a><br><br>
 </ul>
 
 </td>
