adding communication article

--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
 <a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy" target="_blank">ResearchGate page</a> <br>
 <a href="http://iitm.irins.org/profile/68217" target="_blank">Scholar Profiles @ IITM</a> <br>
-<!--<a href="https://owncloud.iitm.ac.in/index.php/s/QZfWJrYujbmlLw4" target="_blank">Group picture (May 2017)pw: 1</a> <br> -->
+<!--<a href="https://www.scopus.com/authid/detail.uri?authorId=36195254200" target="_blank">Scopus Page</a> <br>-->
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2149-8007" href="https://orcid.org/0000-0003-2149-8007" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">ORCID Page </a></div>
 </td>
 
 <td width="50%">
@@ -1075,12 +1076,13 @@ For an M. Tech project*
 <tr>
 <td>
 <h2> Useful web-based tools</h2>
-<a href="http://arohatgi.info/WebPlotDigitizer/" target="_blank">Web plot digitizer</a></br>
-<a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a></br>
-<a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
-<a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
-<a href="https://www.wordclouds.com" target="_blank">WordClouds</a></br>
-<a href="https://www.w3schools.com" target="_blank">W3Schools</a><br><br>
+<a href="http://arohatgi.info/WebPlotDigitizer/" target="_blank">Web plot digitizer</a><br>
+<a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a><br>
+<a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a><br>
+<a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a><br>
+<a href="https://www.wordclouds.com" target="_blank">WordClouds</a><br>
+<a href="https://www.w3schools.com" target="_blank">W3Schools</a><br>
+<a href="https://www.qrcode-monkey.com" target="_blank">QR code generator</a><br><br>
 </td>
 </tr>
 
@@ -1094,7 +1096,13 @@ For an M. Tech project*
 <a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
 <a href="http://phdcomics.com" target="_blank"> PhD comics </a><br>
 <a href="https://theconversation.com/lets-ban-powerpoint-in-lectures-it-makes-students-more-stupid-and-professors-more-boring-36183" target="_blank"> No power points for lectures</a><br>
-<br>
+<a href="https://www.gsb.stanford.edu/insights/five-common-communication-mistakes-how-fix-them?mkt_tok=eyJpIjoiTWpnd016ZzVOemN6TmpBeCIsInQiOiJ1a0FpUjlWUTcwUDJzV0hlK21ITkFqdUh1XC9tUlYzVDRpM1hEbStFXC9LUlwvb0hQcHRkbnhxMThhMUV2a3JCdFdxd0dvb1QrSlc0U1A0SDVFUmNlTGQzVVZsQ1NCYTdiM0ZQVGFVZEdoTnRcLytXdDdnS0tGNGdRMnRyblh6QWdnZTIifQ%3D%3D" target="_blank">Top five communication mistakes</a><br>
+</td>
+</tr>
+
+<tr><td>
+<h2> QR code  </h2>
+	<img src="./images/C3_qrcode.png" width="200">
 </td>
 </tr>
 
