--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ For an M. Tech project*
 </tr>
 
 <tr><td>
-<h2> QR code  </h2>
+<h2> QR code for the group </h2>
 	<img src="./images/C3_qrcode.png" width="200">
 </td>
 </tr>
