--- a/index.html
+++ b/index.html
@@ -1090,6 +1090,7 @@ For an M. Tech project*
 <td>
 <h2> Articles/Opinions </h2>
 <a href="https://www.nature.com/articles/d41586-018-07332-x?WT.mc_id=EMX_NJOBS_1103_NATUREJOBSNEWSLETTER_A&WT.ec_id=EXTERNAL&spMailingID=57751504&spUserID=NjU5MTU3MDIwNzUS1&spJobID=1521146137&spReportId=MTUyMTE0NjEzNwS2" target="_blank">For those starting their graduate studies</a><br>
+<a href="https://me.stanford.edu/sites/g/files/sbiybj9736/f/advice_paper_web.pdf" target="_blank">Some Important Things Most Students Never Ask About Graduate School</a><br>
 <a href="https://theconversation.com/lets-ban-powerpoint-in-lectures-it-makes-students-more-stupid-and-professors-more-boring-36183" target="_blank"> No power points for lectures</a><br>
 <a href="https://www.gsb.stanford.edu/insights/five-common-communication-mistakes-how-fix-them?mkt_tok=eyJpIjoiTWpnd016ZzVOemN6TmpBeCIsInQiOiJ1a0FpUjlWUTcwUDJzV0hlK21ITkFqdUh1XC9tUlYzVDRpM1hEbStFXC9LUlwvb0hQcHRkbnhxMThhMUV2a3JCdFdxd0dvb1QrSlc0U1A0SDVFUmNlTGQzVVZsQ1NCYTdiM0ZQVGFVZEdoTnRcLytXdDdnS0tGNGdRMnRyblh6QWdnZTIifQ%3D%3D" target="_blank">Top five communication mistakes</a><br>
 <br>
