--- a/academics/academics.html
+++ b/academics/academics.html
@@ -43,6 +43,10 @@ Perspectives: <ul>
 <li> <a href="https://www.dropbox.com/s/x0l09l5qkrdz5pd/Kalghatgi_is_it_end_of_ICE.pdf?dl=0" target="_blank">Is it really the end of ICE?</a> - <a href="https://www.dropbox.com/s/sgt9v9y0btnbmtk/Notes_Kalghatgi_ICE.pdf?dl=0" target="_blank">Notes</a>
 </li>
 <li> <a href="https://pepiot.mae.cornell.edu/pdf/Pepiot_DRGEP_CF_2008.pdf" target="_blank">DRGEP</a> - <a href="https://www.dropbox.com/s/4ln99nyinflcn0l/DRGEP_Notes.pdf?dl=0" target="_blank">Notes</a>
+</li>
+<li> Reduction for flames - 
+	<a href="https://www.dropbox.com/s/dzh9mvxoy3hs7h4/DRGEP_SL_Target_Notes.pdf?dl=0" target="_blank">Notes </a>
+</li>
 </ul>
 
 </body></html>
