--- a/logger/logger.html
+++ b/logger/logger.html
@@ -53,4 +53,10 @@ Lessons:
 <li><a href="https://www.dropbox.com/s/vsg8s9pzj2ywvgw/Paricaya_Lesson6_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive I</a>, <a href="https://www.dropbox.com/s/605yf11jbhkoklb/Paricaya_Lesson7_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive II</a>
 </ul>
 
+sambhAshana sandesha:
+<ul>
+<li>rUpakam: <a href="https://www.dropbox.com/s/b292f23n34gomdf/rUpakam_April_2019.pdf?dl=0" 
+	style="text-decoration:none;color:white" target="_blank">sansarga doshah</a>
+</ul>
+
 </body></html>
