--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@ For an M. Tech project*
 <tr>
 <td>
 <h2> Unclassified </h2>
-<a href="gallery/gallery.html" target="_blank">Gallery</a>  <br>
+<!-- <a href="gallery/gallery.html" target="_blank">Gallery</a>  <br> -->
 <a href="academics/academics.html" target="_blank">Notes</a>  <br>
 <a href="logger/logger.html" target="_blank"> Musings</a> <br>
 <a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
