--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <div class="mySlides fade">
   <center> <img src="research_highlights/23spec_14step_results_Figd.png" style="width:80%"> 
-  <br> <p style="text-align:left;">   Extinction strain rates of DME-air mixtures, which are not available in the literature, are measured in a counter-flow diffusion flame burner.  A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. In addition to the extinction data, the short mechanism accurately reproduces the available experimental data in the literature.    </center>
+  <br> <p style="text-align:left;">   Extinction strain rates of DME-air mixtures are measured in a counter-flow diffusion flame burner.  A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. In addition to the extinction data, the short mechanism accurately reproduces the available experimental data in the literature.    </center>
 </div>
 
 <div class="mySlides fade">
