--- a/index.html
+++ b/index.html
@@ -827,8 +827,8 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	<td width="25%" id="people-krunal">
 	<center><img src="./images/Krunal.jpg" width="150">	
 	</br>
-	<h4>Krunal Rajeshkumar Panchal</h4>
-	<h5> PhD scholar </h5>
+	<h4>Krunal Rajeshkumar Panchal<br>
+	PhD scholar </h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Krunal obtained his B.E. in Mechanical Engineering from Government Engineering College, Modasa, Gujarat in 2016. Thereafter, he obtained his M. Tech in Mechanical Engineering from Nirma Unirversity, Ahmedabad, Gujarat in 2018. His research topic focuses on optimization methods in combustion kinetics.
@@ -841,8 +841,8 @@ Krunal obtained his B.E. in Mechanical Engineering from Government Engineering C
 <td width="25%" id="people-shan">
 	<center><img src="./images/Shanmugasundaram.jpg" width="150">	
 	</br>
-	<h4> Shanmugasundaram D</h4>
-	<h5> PhD scholar </h5>
+	<h4> Shanmugasundaram D<br>
+	 PhD scholar </h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery in 2014 and 2016 respectively. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras. 
@@ -859,8 +859,8 @@ View research  <a href="#kinetics_small_oxygenates" onclick="openCity(event, 'Cu
 	<td width="25%" id="people-kedar">
 	<center><img src="./images/Kedar.jpg" width="150">	
 	</br>
-	<h4>Page Kedar Govind</h4>
-	<h5> MS scholar </h5>
+	<h4>Page Kedar Govind<br>
+ MS scholar </h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Kedar obtained his B.E. in Mechanical Engineering from PVG's College of Engineering and Technology, Pune  in 2017. His research topic focuses on developing open source tools to generate compact kinetic models.
@@ -870,8 +870,8 @@ Kedar obtained his B.E. in Mechanical Engineering from PVG's College of Engineer
 	<td width="25%" id="people-pragnesh">
 	<center><img src="./images/Pragnesh.jpg" width="150">	
 	</br>
-	<h4>Pragnesh Rajubhai Rana</h4>
-	<h5> MS scholar </h5>
+	<h4>Pragnesh Rajubhai Rana<br>
+	 MS scholar </h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics. His thesis is co-advised by Dr. Sivaram Ambikasaran at IIT Madras.
@@ -884,8 +884,8 @@ View research  <a href="#misc" onclick="openCity(event, 'Current_Research')"> he
 <td width="25%" id="people-praise">
 	<center><img src="./images/Praise_Noah_Johnston.jpg" width="150">	
 	</br>
-	<h4>Praise Noah Johnson</h4>
-	<h5> MS scholar </h5>
+	<h4>Praise Noah Johnson<br>
+  MS scholar </h4>
 </center>
 Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. His research work centers on kinetics of unsaturated ester content in biodiesel fuel. 
 </p>
